# InformationAccretion

./: README.md  ia.py  pyproject.toml
